<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:minHeight="48dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/tv_languages"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/Languages"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/tv_filter_javascript"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/cb_filter_javascript"
        app:layout_constraintStart_toStartOf="@id/tv_languages"
        app:layout_constraintTop_toBottomOf="@id/tv_languages"
        android:text="@string/javascript" />

    <CheckBox
        android:id="@+id/cb_filter_javascript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|end"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_filter_javascript"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_filter_assembly"
        app:layout_constraintEnd_toStartOf="@+id/cb_filter_assembly"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_javascript"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/assembly"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        />

    <CheckBox
        android:id="@+id/cb_filter_assembly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_filter_assembly"
        android:layout_marginEnd="8dp"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_filter_c"
        app:layout_constraintTop_toBottomOf="@id/tv_filter_assembly"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toStartOf="@+id/cb_filter_C"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="start|center_vertical"
        android:minHeight="48dp"
        android:text="@string/c"/>


    <CheckBox
        android:id="@+id/cb_filter_C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_filter_c"
        android:layout_marginEnd="8dp"
        />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_c" />

</androidx.constraintlayout.widget.ConstraintLayout>